--- a/overmij.html
+++ b/overmij.html
@@ -10,7 +10,7 @@ rel="stylesheet"
 integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
 crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="stijl.css">
-<title>Home</title>
+<title>Over mij</title>
 </head>
 <body>
   <header>
